<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBJyGCNLzi9RlVEPeTTtDX4PtLEJBdpQlQ</string>
    <string name="app_name">Ridi</string>

    <string name="title_activity_maps">Map</string>
    <!--<string name="term_apps">By active account, I agree to <b>Ridesharing term</b></string>-->
    <string name="term_apps">Để kích hoạt tài khoản, tôi đồng ý với những <b>điều khoản của ridi</b></string>
    <string name="title_message_where_activate_code">Nhập mã OTP</string>
    <string name="description_message_where_activate_code">Mã OTP sẽ được gửi tới số</string>



    <!--Login-->
    <string name="matching">Gợi ý tương xứng</string>
    <string name="matching_description">Với tỉ lệ phù hợp cao</string>
    <string name="put_trip">Đặt chuyến</string>
    <string name="put_trip_description">Nhanh chóng và thông báo đến nếu có người đi chung</string>

    <string name="onboard_secure_title">An toàn</string>
    <string name="onboard_secure_description">Là trên hết</string>
    <string name="onboard_ux_title">Trải nghiệm tốt</string>
    <string name="onboard_ux_description">Dễ sử dụng</string>
    <string name="onboard_money_title">Tiết kiệm tiền</string>
    <string name="onboard_money_description">Đầu tư vào bản thân</string>
    
    <!--Feedback-->
    <string name="feeling_where_feedback">Bạn cảm thấy sao khi sử dụng ứng dụng?</string>
    <string name="promise_where_feedback">Nếu có vấn đề, hãy phản hồi cho chúng tôi để chúng tôi sửa lỗi sai của mình. Chúng tôi muốn bạn có trải nghiệm tốt nhất!</string>
    <string name="title_where_feedback">Tên vấn đề</string>
    <string name="description_where_feedback">Diễn tả vấn đề</string>
    <string name="satisfaction_level_where_feedback">Mức độ hài lòng của bạn</string>
    <string name="submit_where_feedback">Gửi </string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Trang chủ </string>
    <string name="nav_notifications">Thông báo </string>
    <string name="nav_settings">Cài đặt </string>
    <string name="nav_chat">Chat</string>

    <string name="activity_title_feedback">Phản hồi </string>
    <string name="activity_title_about_us">Về chúng tôi </string>
    <string name="activity_title_privacy_policy">Chính sách </string>
    <string name="action_logout">Đăng xuất</string>

    <string name="note_where_add_bank_card">Lưu ý: vui lòng nhập đúng thông tin đã đăng ký với ngân hàng</string>
    <string name="title_activity_setting">Cài đặt </string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--profile activity-->
    <string name="find_ride_where_profile">Tôi tìm người có xe </string>
    <string name="offer_ride_where_profile">Tôi cung cấp xe</string>
    <string name="home_place_where_profile">Thiết lập vị trị nhà</string>
    <string name="office_place_where_profile">Thiết lập vị trí công ty</string>
    <string name="start_time_where_profile">Bắt đầu làm việc</string>
    <string name="leave_office_where_profile">Kết thúc làm việc </string>
    <string name="birth_day_where_profile">Thiết lập ngày sinh</string>
    <string name="update_profile_where_profile">Cập nhật hồ sơ</string>

    <!--ui profile user-->
    <string name="phone_where_profile">Số điện thoại</string>
    <string name="first_name_where_profile">Họ</string>
    <string name="last_name_where_profile">Tên</string>
    <string name="gender_male">Nam</string>
    <string name="gender_female">Nữ</string>

    <!--main activity-->
    <string name="find_ride_where_main">Tìm xe</string>
    <string name="offer_ride_where_main">Cung cấp xe</string>
    <string name="ride_where_main">Lịch đặt xe</string>

    <!--bottom sheet-->
    <string name="find_ride_where_bottom_navigation_where_main">Tôi tìm người có xe</string>
    <string name="offer_ride_where_bottom_navigation_where_main">Tôi cung cấp xe</string>
    <string name="option_find_ride_where_bottom_navigation_where_main">Một chỗ ngồi</string>
    <string name="option_offer_ride_where_bottom_navigation_where_main">Xe máy</string>

    <!--no internet fragment-->
    <string name="no_internet_where_no_internet_fragment">Không có internet</string>

    <!--item matching-->
    <string name="request_where_item_matching">Mời</string>


    <!--home-->
    <string-array name="list_area">
        <item>An Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cao Bằng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Tiền Giang</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
        <item>Phú Yên</item>
        <item>Cần Thơ</item>
        <item>Đà Nẵng</item>
        <item>Hải Phòng</item>
        <item>Hà Nội</item>
        <item>Hồ Chí Minh</item>
    </string-array>
</resources>
